# quadcraft

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
res/shaders/: chunk.frag  chunk.vert  composite.frag  composite.vert  debug.frag  debug.vert  raytrace.comp
src/: aabb.c  aabb.h  arena.h  block_type.c  block_type.h  blocks.c  blocks.h  camera.c  camera.h  chunk.c  chunk.h  direction.c  direction.h  main.c  math3d.c  math3d.h  mesh_allocator.c  mesh_allocator.h  meshing.c  meshing.h  texture_array.c  texture_id.c  texture_id.h  textures.c  textures.h  utils.c  utils.h  world.c  world.h
src/render/: meshing.c  meshing.h  texture_array.c  texture_array.h
src/utils/: arena.c  arena.h  direction.c  math3d.c  math3d.h  range_allocator.c  range_allocator.h
src/world/: block_type.c  block_type.h  camera.h  chunk.c  chunk.h  world.c  world.h
